# Conversor-Video-Para-ASCII

./:  .gitignore  .coveragerc  .gitignore  .mailmap  .test_clean.txt  .test_emoji.txt  .test_secret.py  CHANGELOG.html  CHANGELOG.md  CHANGELOG.txt  INDEX.md  Juno_observando.txt  README.md  README_v2.md  TESTE_RAPIDO.md  calibrator.py  cli.py  com.github.andrebfarias.extase-em-4r73.yml  config.ini  converter.py  install.sh  main.py  main_cli.py  metadados.json  my-mailmap  player.py  pyproject.toml  pytest.ini  requirements-appimage.txt  requirements.txt  run_extase-em-4r73.sh  test_hybrid_display.sh  test_installation.sh  test_new_features.sh  test_pixelart_fix.sh  test_presets_optimized.sh  test_window_resize.py  uninstall.sh
debian/: changelog  control  extase-em-4r73.desktop  postinst  prerm
docs/: AUDITORIA_BUGS_2026.md  AUDITORIA_FINAL_v2.5.0.html  AUDITORIA_FINAL_v2.5.0.md  AUDITORIA_FINAL_v2.5.0.txt  AUDITORIA_SCORECARD.md  CHANGELOG.md  CLI_GUIDE.md  CODE_OF_CONDUCT.md  CONFIG_REFERENCE.md  CONTRIBUTING.md  GIT_HOOKS_GUIDE.md  GPU_TROUBLESHOOTING.md  INDEX.md  INSTALL.md  Makefile  PLANO_IMPLEMENTACAO_10_10.md  PRESETS_REFERENCE.md  RESOLUCAO_TERMINAL_HISTORIA.md  ROADMAP.md  SECURITY.md  SPRINTS_REPORT.md  SPRINT_31_FULLSCREEN_UNIFICADO.md  SPRINT_32_QUALIDADE_INTEGRACAO.md  SPRINT_33_PREVIEW_BIDIRECIONAL.md  SPRINT_34_CALIBRADOR_JANELA_SALVAR.md  SPRINT_35_UNIFICACAO_FALLBACKS.md  SPRINT_36_PRESETS_LIMITES_CONFIG.md  SPRINT_37_ENCODING_FFMPEG_CALIBRADOR.md  SPRINT_38_COMPATIBILIDADE_AUDIO_POSTFX.md  SPRINT_39_ELIMINACAO_DUPLICACAO.md  TESTING_GUIDE.md  (+4 more)
(+123 files in other folders)
