[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "extase-em-4r73"
version = "2.6.1"
description = "Conversor de vídeo para ASCII art em tempo real com aceleração GPU"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "mediapipe>=0.10.0",
    "pyaudio>=0.2.13",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]
dev = ["pytest>=8.0.0", "pytest-cov>=4.1.0", "sphinx>=7.2.0"]

[tool.setuptools.packages.find]
where = ["src"]
